🎨  Fin 3eme jour

--- a/src/JoliBlogBundle/Resources/config/services.yml
+++ b/src/JoliBlogBundle/Resources/config/services.yml
@@ -1,4 +1,3 @@
 services:
-#    joli_blog.example:
-#        class: JoliBlogBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    joli.joli_service:
+        class: JoliBlogBundle\Service\JoliService
